# Initial-CircuiTikZ-Editor-setup

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/circuit/: circuitcanvas.cpp  circuitcanvas.h  circuitelement.cpp  circuitelement.h  tikzgenerator.cpp  tikzgenerator.h
